# itzuli-stanza-mcp

./: .env.example  .gitignore  ARCHITECTURE.eu.md  ARCHITECTURE.md  CLAUDE.md  README.eu.md  README.md  __init__.py  main.py  package-lock.json  package.json  pyproject.toml  stanza_playground.py
alignment_server/: scaffold.py  server.py
backend/: ARCHITECTURE.eu.md  ARCHITECTURE.md  README.eu.md  README.md  pyproject.toml
backend/src/itzuli_nlp/: __init__.py
backend/tests/alignment_server/: test_cache.py  test_claude_integration.py  test_integration_manual.py  test_load_manual.py  test_scaffold_manual.py  test_server.py
backend/tests/core/: __init__.py  test_formatters.py  test_nlp.py  (+1 more)
backend/tools/: dual_analysis.py  generate_scaffold.py
core/: formatters.py  nlp.py  workflow.py
core/types/: __init__.py
frontend/: .env  biome.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/resources/: fixtures.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
itzuli_stanza_mcp/: app.py  formatters.py  i18n.py  itzuli_mcp_server.py  nlp.py  services.py  workflow.py
itzuli_stanza_mcp/types/: __init__.py  alignment.py
mcp_server/: server.py  services.py
tests/: test_formatters.py  test_itzuli_mcp_server.py  test_nlp.py  test_workflow.py
tests/alignment_server/: __init__.py  test_load_manual.py  test_scaffold_manual.py  test_server.py
tests/core/: test_formatters.py  test_nlp.py  test_workflow.py
tests/mcp_server/: __init__.py  test_itzuli_mcp_server.py
tools/: __init__.py  dual_analysis.py  generate_scaffold.py
(+27 files in other folders)
