[project]
name = "stanza-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dependencies>=7.7.1",
    "fastmcp>=2.14.5",
    "ipython>=8.18.1",
    "itzuli>=1.1.0",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
    "stanza>=1.11.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.1",
]
